--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,8 @@
         <java.version>1.8</java.version>
         <scala.binary.version>2.10</scala.binary.version>
         <spark.version>1</spark.version>
-        <nd4j.gpu.backend>nd4j-cuda-8.0</nd4j.gpu.backend>
-        <nd4j.cpu.backend>nd4j-native</nd4j.cpu.backend>
+        <nd4j.gpu.backend>nd4j-cuda-8.0-platform</nd4j.gpu.backend>
+        <nd4j.cpu.backend>nd4j-native-platform</nd4j.cpu.backend>
         <nd4j.version>0.9.2-SNAPSHOT</nd4j.version>
         <datavec.version>0.9.2-SNAPSHOT</datavec.version>
         <dl4j.version>0.9.2-SNAPSHOT</dl4j.version>
